--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do List</title>
-<script defer src="index.bundle.js"></script><script defer src="print.bundle.js"></script></head>
+</head>
 <body>
     <h1>To-do List</h1>
 </body>
