--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!doctype html><html><head><meta charset="utf-8"><title>Output Management</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="index.bundle.js"></script><script defer="defer" src="print.bundle.js"></script></head><body></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To-do List</title>
+<script defer src="index.bundle.js"></script><script defer src="print.bundle.js"></script></head>
+<body>
+    <h1>To-do List</h1>
+</body>
+</html>
