Add basic css design to the list

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,23 @@
 </head>
 <body>
     <h1>To-do List</h1>
+    <div>JudaLabs tasks</div>
+    <ul>
+        <li class="empty-slot">
+            Add to your list
+        </li>
+        <li class="unchecked-slot">
+            <div class="box-unchecked"> </div>
+            <div class="task">Make cuzcuz</div>
+            <div class="handle"> </div>
+        </li>
+        <li class="unchecked-slot">
+            Make coffee
+        </li>
+        <li class="checked-slot">
+            Completed task
+        </li>
+    </ul>
+    <div class="clear-done">Clear all completed</div>
 </body>
 </html>
